[package]
name = "pot"
version = "0.0.0"
description = "Pot App"
authors = ["pot-app"]
license = "GPL-3.0-only"
repository = "https://github.com/pot-app/pot-desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]

tauri = { version = "1.5", features = [ "dialog-save", "dialog-open", "fs-all", "protocol-asset", "shell-all", "clipboard-all", "os-all", "http-all", "http-multipart", "updater", "notification-all", "global-shortcut-all", "window-all", "path-all", "system-tray"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-sql = { git= "https://github.com/tauri-apps/plugins-workspace", branch = "v1",features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
selection = "1.1.1"
serde_json = "1.0"
dirs = "5.0.1"
once_cell = "1.18.0"
mouse_position = "0.1.3"
log = "^0.4"
tiny_http = "0.12.0"
screenshots = "0.7.2"
image = "0.24.6"
base64 = "0.21.2"
arboard = "3.2.0"
libloader = "0.1.4"
libloading = "0.8.0"
lingua = { version = "1.5.0", default-features = false, features = ["chinese", "japanese", "english", "korean", "french", "spanish", "german", "russian", "italian", "portuguese", "turkish", "arabic", "vietnamese", "thai", "indonesian", "malay", "hindi", "mongolian", "persian", "nynorsk", "bokmal"] }
reqwest = { version = "0.11", features = ["json"] }
reqwest_dav = "0.1.5"
zip = "0.6.6"
walkdir = "2.3.3"
thiserror = "1.0.47"
font-kit = "0.12.0"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
window-shadows = "0.2"

[target.'cfg(windows)'.dependencies]
windows = {version="0.44.0",features= ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Graphics_Imaging", "Media_Ocr", "Foundation", "Globalization", "Storage", "Storage_Streams"] }
window-shadows = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
#openssl

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
