[package]
name = "pot"
version = "0.0.0"
description = "Pot App"
authors = ["pot-app"]
license = "GPL-3.0-only"
repository = "https://github.com/pot-app/pot-desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]

tauri = { version = "1.8", features = [ "dialog-save", "dialog-open", "fs-all", "protocol-asset", "shell-all", "clipboard-all", "os-all", "http-all", "http-multipart", "updater", "notification-all", "global-shortcut-all", "window-all", "path-all", "system-tray", "devtools"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-sql = { git= "https://github.com/tauri-apps/plugins-workspace", branch = "v1",features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
selection = "1.2.0"
serde_json = "1.0"
dirs = "5.0.1"
once_cell = "1.19.0"
mouse_position = "0.1.4"
log = "0.4"
tiny_http = "0.12.0"
screenshots = "=0.7.2"
base64 = "0.22"
arboard = "3.4"
lingua = { version = "1.6.2", default-features = false, features = ["chinese", "japanese", "english", "korean", "french", "spanish", "german", "russian", "italian", "portuguese", "turkish", "arabic", "vietnamese", "thai", "indonesian", "malay", "hindi", "mongolian", "persian", "nynorsk", "bokmal", "ukrainian"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest_dav = "=0.1.5"
zip = "2.2.0"
walkdir = "2.5"
thiserror = "1.0"
font-kit = "0.14.2"
image = "0.25.4"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
window-shadows = "0.2"

[target.'cfg(windows)'.dependencies]
windows = {version="0.58.0",features= ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Graphics_Imaging", "Media_Ocr", "Foundation", "Globalization", "Storage", "Storage_Streams"] }
window-shadows = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
#openssl

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
